--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
+    "moment": "^2.22.2",
     "primeicons": "^1.0.0",
     "primeng": "^6.1.4",
     "rxjs": "^6.0.0",
